--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,11 +19,7 @@ body {
  font-family: "Fira Mono", monospace;
 }
 h1::before,
-h2::before,
-h3::before,
-h4::before,
-h5::before,
-h6::before {
+h2::before {
   content: "# ";
   color: var(--accent);
   margin-right: 0.5rem;
@@ -37,13 +33,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* Links */
-a {
+.under, a {
   color: #f0f0f0;
   text-decoration: none;
   position: relative;
   transition: color 0.3s ease;
 }
-a::after {
+.under, a::after {
   content: "";
   position: absolute;
   left: 0;
@@ -53,7 +49,7 @@ a::after {
   background-color: var(--accent); /* fixed from var(--orange) */
   pointer-events: none;
 }
-a:hover {
+.under, a:hover {
   color: var(--bg-color);
   background-color: var(--accent);
 }
@@ -85,6 +81,7 @@ blockquote {
 code {
 background-color: #1f1f1f;
 /* border: 1px solid #383838; */
+
   font-family: "Fira Mono", monospace;
 }
 
@@ -160,13 +157,14 @@ html.light a::after,
 }
 
 .light code {
-  background-color: #fafafa;
 
+color:white;
   /* border: 1px solid #e6e6e6; */
 }
 
 .light pre {
   background: var(--bg-alt);
+  color:white;
   /* border: 1px solid var(--border); */
 }
 
