--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -147,7 +147,7 @@ pre {
 .light nav .links::after {
   text-decoration: none;
   background: none;
-
+  position: static;
 }
 .light nav .links::after {
   content: none;
