--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -8,40 +8,42 @@
 article > div{
   margin: 10px 0px;
 }
+h1,h2,h3,h4,h5,h6{
+  font-size: 1.2rem;
+   margin-top: 2em;
+}
 /* Headings */
 .prose-enhanced h1 {
-  font-size: 1.35rem;   
+  font-size: 1.2rem;   
   font-weight: 400;
-  margin-bottom: 1.5em;
+  margin-bottom: 1em;
 }
 
 .prose-enhanced h2 {
-  font-size: 1rem;     
   font-weight: 400;
   margin-top: 2rem;
-  margin-bottom: 1.5em;
+
 }
 
 .prose-enhanced h3 {
-  font-size: 0.92rem;   
   font-weight: 500;
   margin-top: 1.5em;
-  margin-bottom: 1.2rem;
+
 }
 
 /* Paragraphs */
 .prose-enhanced p {
-  margin-bottom: 15px;
+line-height: 1.5;
 }
 
 /* Lists */
 .prose-enhanced ul,
 .prose-enhanced ol {
   padding-left: 1.5rem;
-  margin-bottom: 1.25rem;
+
 }
 .prose-enhanced li {
-  margin-bottom: 0.5rem;
+
 }
 
 /* Blockquote */
@@ -49,7 +51,7 @@ article > div{
   border-left: 4px solid var(--orange);
   padding-left: 1rem;
   font-style: italic;
-  margin: 1.25rem 0;
+
   font-size: 1rem;
 }
 
@@ -57,7 +59,7 @@ article > div{
 .prose-enhanced code {
   padding: 0.25rem 0.5rem;
   border-radius: 6px;
-
+line-height: 1.4;
   font-size: 0.95rem;
 }
 /* Preformatted blocks */
@@ -65,37 +67,11 @@ article > div{
   padding: 1rem;
   border-radius: 0.75rem;
   overflow-x: auto;
-  margin: 1.25rem 0;
   color: var(--fg);
-  font-size: 0.95rem;
+  font-size: 15px;
 }
 .prose-enhanced pre code {
   
   padding: 5;
 }
 
-/* Tablet screens 
-@media (min-width: 640px) {
-  .prose-enhanced {
-    padding: 1.25rem;
-    font-size: 1.0625rem;
-  }
-  .prose-enhanced h1 { font-size: 2rem; }
-  .prose-enhanced h2 { font-size: 1.75rem; }
-  .prose-enhanced h3 { font-size: 1.5rem; }
-}
-
-Desktop screens 
-@media (min-width: 1024px) {
-  .prose-enhanced {
-    padding: 1.5rem;
-    font-size: 1.125rem;
-  }
-  .prose-enhanced h1 { font-size: 2rem;  }
-  .prose-enhanced h2 { font-size: 1.3rem; }
-  .prose-enhanced h3 { font-size: 1.1rem; }
-  .prose-enhanced blockquote { font-size: 1.125rem; }
-  .prose-enhanced pre, 
-  .prose-enhanced code { font-size: 1.1rem; }
-}
-*/
