--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
-/* @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
- */
- @import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap'); */
+
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 @import "tailwindcss"; /* Optional if using Tailwind CSS */
 
 /* CSS Variables for themes */
@@ -16,16 +16,13 @@
 body {
   background-color: var(--bg-color);
   color: var(--text-color);
- font-family: "Fira Mono", monospace;
+  font-size: 15px;
+ /* font-family: "Roboto Mono", monospace; */
+  font-family: "JetBrains Mono", monospace;
+  /* font-family: "IBM Plex Mono", monospace; */
  
 }
-h1::before,
-h2::before {
-  content: "# ";
-  color: var(--accent);
-  /* margin-right: 0.5rem; */
-  user-select: none; /* so user can’t accidentally select the # */
-}
+
  
 /* Headings */
 h1, h2, h3, h4, h5, h6 {
@@ -99,7 +96,7 @@ pre {
 
 /* Light mode */
 .light {
-  --text-color: #1d2021;
+  --text-color: black;
   --bg-color: #f5f5f5;
   --bg-alt: navy;
   --accent: #ef5350;
