--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -1,9 +1,10 @@
 /* Base prose styles */
+@import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap');
 .prose-enhanced {
   max-width: none;
   line-height:1.6em;
 
-  font-size: 15px; /* mobile base */
+   /* mobile base */
 }
 article > div{
   margin: 20px 0px;
@@ -63,6 +64,9 @@ h2::before {
   padding-left: 1.5rem;
  
 }
+.prose-enhanced img{
+  margin:10px 0px;
+}
 .prose-enhanced li{
   font-size: 1rem;
   list-style:square;
@@ -85,19 +89,23 @@ h2::before {
 /* Code */
 .prose-enhanced code {
   padding: 0.25rem 0.5rem;
+
+  font-family: "Fira Mono", monospace;
   border-radius: 6px;
+
 line-height: 1.4;
+
+
   font-size: 0.95rem;
 }
 /* Preformatted blocks */
 .prose-enhanced pre {
   padding: 1rem;
-  
+    font-size: 20rem;
   border-radius: 0.75rem;
   overflow-x: auto;
-  color: var(--fg);
+  /* color: var(--fg); */
   margin: 20px 0px;
-  font-size: 15px;
 }
 .prose-enhanced pre code {
   
