--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,10 +5,10 @@
 
 /* CSS Variables for themes */
 :root {
-  --text-color: white;
-  --bg-color: #121212;      /* dark background */
+  --text-color: #aaaaaa;
+  --bg-color: #181818;      /* dark background */  
   --bg-alt: #282828;        /* lighter background for code blocks, etc */
-  --accent: #50fa7b;        /* orange accent */
+  --accent: #ac4242;        /* orange accent */
   --border: #3c3836;        /* subtle border */
 }
 
@@ -26,13 +26,13 @@ body {
  
 /* Headings */
 h1, h2, h3, h4, h5, h6 {
-  color: white;
+  /* color: white; */
   margin-top: 0; /* could remove if you want zero margin everywhere */
 }
 
 /* Links */
 .under, a {
-  color: #f0f0f0;
+  /* color: #f0f0f0; */
   text-decoration: none;
   position: relative;
   transition: color 0.3s ease;
@@ -48,7 +48,7 @@ h1, h2, h3, h4, h5, h6 {
   pointer-events: none;
 }
 .under, a:hover {
-  color: var(--bg-color);
+  color: white;
   background-color: var(--accent);
 }
 
