--- a/src/styles/underline.css
+++ b/src/styles/underline.css
@@ -1,5 +1,5 @@
 .linkWithUnderline {
-  color: #f0f0f0;
+  /* color: #f0f0f0; */
   position: relative;
   text-decoration: none;
   transition: color 0.3s ease;
