--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -2,48 +2,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap');
 .prose-enhanced {
   max-width: none;
-  line-height:1.6em;
+  line-height: 1.7;
+}
 
+article > div {
+  margin: 1.5rem 0;
 }
-article > div{
-  margin: 20px 0px;
+
+h1, h2, h3, h4, h5, h6 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+  margin-top: 2.5rem;
+  line-height: 1.3;
 }
-h1,h2,h4,h5,h6{
-  font-size: 1.3rem;
-  margin-bottom: 15px;
-   margin-top: 2em;
+
+.page-header {
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 1.3;
+  margin-bottom: 1.5rem;
 }
-.page-header{
-  font-size: 1.5rem;   
-  font-weight: 400;
-  line-height: 1.4;
-  margin-bottom: 1em;
-}
+
 /* Headings */
 .prose-enhanced h1 {
-  font-size: 1.2rem;   
-  font-weight: 400;
-  margin-bottom: 1em;
+  font-size: 1.75rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+  margin-top: 2.5rem;
 }
 
 .prose-enhanced h2 {
+  font-size: 1.5rem;
   font-weight: 500;
-  margin-top: 2rem;
-  line-height: 1.5;
-
+  margin-top: 2.5rem;
+  margin-bottom: 1rem;
+  line-height: 1.3;
 }
 
 .prose-enhanced h3 {
+  font-size: 1.25rem;
   font-weight: 500;
-  margin-top: 1.5em;
-
+  margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 /* Paragraphs */
 .prose-enhanced p {
-line-height: 1.5;
-font-weight: 500;
-font-size: 1rem;
+  line-height: 1.7;
+  font-weight: 400;
+  font-size: 1rem;
+  margin: 1rem 0;
 }
 h1::before {
   content: "# ";
@@ -61,15 +70,19 @@ h2::before {
 .prose-enhanced ul,
 .prose-enhanced ol {
   padding-left: 1.5rem;
- 
+  margin: 1rem 0;
 }
-.prose-enhanced img{
-  margin:10px 0px;
+
+.prose-enhanced img {
+  margin: 1.5rem 0;
   width: 100%;
 }
-.prose-enhanced li{
+
+.prose-enhanced li {
   font-size: 1rem;
-  list-style:square;
+  line-height: 1.7;
+  margin: 0.5rem 0;
+  list-style: square;
 }
 /* .prose-enhanced li::before{
   content: "*";
@@ -79,11 +92,12 @@ h2::before {
 
 /* Blockquote */
 .prose-enhanced blockquote {
-  border-left: 4px solid var(--orange);
+  border-left: 4px solid var(--accent);
   padding-left: 1rem;
+  margin: 1.5rem 0;
   font-style: italic;
-
   font-size: 1rem;
+  line-height: 1.7;
 }
 
 /* Code */
