--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,12 +11,29 @@
   --accent: #ac4242;        /* orange accent */
   --border: #3c3836;        /* subtle border */
 }
-
+html{
+  font-size: 18px;
+}
+@media (min-width: 960px) {
+  html {
+    font-size: 18px;
+  }
+}
+@media (min-width: 720px) {
+  html {
+    font-size: 17px;
+  }
+}
+@media (min-width: 640px) {
+  html {
+    font-size: 16.5px;
+  }
+}
 /* Body and base styles */
 body {
   background-color: var(--bg-color);
   color: var(--text-color);
-  font-size: 15px;
+
  /* font-family: "Roboto Mono", monospace; */
   font-family: "JetBrains Mono", monospace;
   /* font-family: "IBM Plex Mono", monospace; */
