--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -51,7 +51,7 @@ h1, h2, h3, h4, h5, h6 {
 .prose-enhanced p {
   line-height: 1.7;
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 18px;
   margin: 1rem 0;
 }
 h1::before {
